--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,34 @@
 @import "tailwindcss";
 :root {
-  font-family: "system-ui", Avenir , "Helvetica Neue", sans-serif;
+  font-family: "system-ui", Avenir, "Helvetica Neue", sans-serif;
 }
 
 @theme {
-  --color-gold: #8A7C56;
+  --color-gold: #8a7c56;
   --font-sans: "Poppins", system-ui, sans-serif;
 }
 
 body {
   @apply font-sans antialiased;
+  .swiper-pagination-bullet {
+    width: 30px;
+    height: 12px;
+    border-radius: 3px; 
+    background-color: #ccc;
+    opacity: 1;
+    transition: all 0.3s ease;
+  }
+
+  .swiper-pagination-bullet-active {
+    background-color: #8a7c56; 
+    width: 30px; 
+  }
+  .swiper-pagination {
+    text-align: left;
+    margin-left: 30px;
+    margin-bottom: -1px;
+    
+  }
 }
 
 /* a {
